--- a/app/templates/iquedev/layout.html
+++ b/app/templates/iquedev/layout.html
@@ -47,7 +47,8 @@
 
               <div class="navbar" style="margin: 0;">
                 <div class="iquedev-logo-header">
-                  Palavras-Chave
+                  <a href="index.php?class=WordGeneratorView">Gerador de Palavras</a>
+                 
                </div>
               </div>
 
@@ -55,20 +56,20 @@
               
               {MENU} 
 
-              <div class="navbar" style="margin: 0;">
+              <!-- <div class="navbar" style="margin: 0;">
                 <div class="iquedev-wrapper-info-header">
                   <div class="iquedev-user-header">
-                      Usuário
+                    <a href="index.php?class=SystemProfileView">{username}</a>
                   </div>
                   <div class="iquedev-logout-header">
                        <a href="index.php?class=LoginForm&method=onLogout">Logout</a>  
                   </div>
-              </div>
+                  </div>
               
               
               
               
-              </div>
+              </div> -->
 
 
               
