login, banco de dados e cadastro de usuários funcionais

--- a/app/templates/iquedev/layout.html
+++ b/app/templates/iquedev/layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="manifest.json?appver=730">
 
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     
     <!-- Tell the browser to be responsive to screen width -->
     <!-- <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"> -->
@@ -85,8 +85,12 @@
 
 
 
-      <div id="adianti_div_content">
+      <div id="adianti_div_content" class="content">
       </div>
+      <div id="adianti_online_content"></div>
+<div id="adianti_online_content2"></div>
+<div id="adianti_right_panel" class="right-panel"></div>
+      
 
 
 
@@ -109,7 +113,7 @@
 
   </div>
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 
     <!-- AdminLTE App -->
     <script src="app/templates/{template}/js/script.js"></script>
