--- a/app/templates/iquedev/layout.html
+++ b/app/templates/iquedev/layout.html
@@ -99,7 +99,7 @@
 
 
       <footer>
-          <p>Palavras-Chave © 2021.</p>
+          <p>Gerador de Palavras © 2021.</p>
           <p class="iquedev-reference">
           Criado por 
           <a href="https://ique.dev/" target="_blank">ique.dev</a>
@@ -119,7 +119,7 @@
     
     
       <div class="iquedev-modal-header">
-          <p class="iquedev-modal-title">Aviso<p>
+          <p class="iquedev-modal-title">Informação<p>
       </div>    
       <div class="iquedev-modal-body">
         {NOTIFICATION}
@@ -140,12 +140,6 @@
     {SCRIPT_INCLUIDE_NOTIFICATION_MENU}
     <!-- <script>includeNotificationMenu()</script> -->
     
-  
-  
-  
-  
-  
-  
   
   
   
