--- a/app/templates/iquedev/layout.html
+++ b/app/templates/iquedev/layout.html
@@ -137,10 +137,12 @@
     <!-- <script src="app/templates/{template}/js/app.min.js"></script>
     <script src="app/templates/{template}/js/custom.js"></script>  -->
   
+    
+
     {SCRIPT_INCLUIDE_NOTIFICATION_MENU}
     <!-- <script>includeNotificationMenu()</script> -->
     
-  
+    <script>includeAffiliateMenu()</script>
   
   
   
