--- a/app/templates/iquedev/login.html
+++ b/app/templates/iquedev/login.html
@@ -26,25 +26,30 @@
     });
     </script>
   </head>
-  <body>
-        <nav class="main-header navbar navbar-light bg-light fixed-top" role="navigation" style="margin-bottom: 0; text-align:center">
-            <!-- <a class="navbar-brand" href="http://www.adianti.com.br/framework">Adianti Framework ERP Template III</a> -->
-            <span> Gerador de Palavras</span> 
+  <body class="iquedev-full-width">
+        <nav class="main-header navbar navbar-light bg-light fixed-top" role="navigation" style="margin-bottom: 0; text-align:center;">
+            <a href="https://go.hotmart.com/V51571436F" style="text-align:center; width: 100%;">Se você não é assinante, CLIQUE AQUI, tenha seu acesso liberado </a>
+            <!-- <span> Gerador de Palavras</span>  -->
         </nav>
         
-        <div id="wrapper" style="width:90%;margin:auto;margin-top:10px">
-            <div id="adianti_div_content"></div>
-            <div id="adianti_online_content"></div>
-            <div id="adianti_online_content2"></div>
+
+        
+        <div id="wrapper" class="iquedev-full-width" style="width:90%;margin:auto;margin-top:10px">
+            <div class="iquedev-login-form iquedev-full-width ique-dev-margin-top" id="adianti_div_content"></div>
+            <div class="iquedev-full-width" id="adianti_online_content"></div>
+            <div class="iquedev-full-width" id="adianti_online_content2"></div>
             
         </div>
-        <div  style="text-align:center">
+        <div class="iquedev-full-width"  style="text-align:center">
             <!--[RESET-PASSWORD]--> <a class='iquedev_label_purple' href="index.php?class=SystemRequestPasswordResetForm"><i class="fa fa-eraser purple" aria-hidden="true"></i> _t{Reset password}</a> <!--[/RESET-PASSWORD]-->
         </div>
+
+           
         
-        <a class="little-float-button bg-yellow" title="PHP Modules" href="index.php?class=SystemModulesCheckView" style="pointer-events: auto;">
+        
+        <!-- <a class="iquedev-full-width" class="little-float-button bg-yellow" title="PHP Modules" href="index.php?class=SystemModulesCheckView" style="pointer-events: auto;">
             <i class="fa fa-cog internal-float-button"></i>
-        </a>
+        </a> -->
         
         <!-- /#wrapper -->
     </body>
