--- a/app/templates/iquedev/application.css
+++ b/app/templates/iquedev/application.css
@@ -67,15 +67,12 @@
     color: white;
     font-weight: bold;
     font-size: 1.2em;
-    height: 95px;
-
+    height: 65px;
     justify-content: center;
     align-items: center;
-
     border-radius: 50px;
     /* padding: 20px; */
 }
-
 
 
 .iquedev-area-field {
@@ -194,18 +191,6 @@
     /* font-weight: normal; */
 }
 
-
-
-.iquedev-area-choice-correspondence {
-    /* width: 230px; */
-    flex: 1;
-}
-
-.iquedev-area-choice-combinations {
-    flex: 1.4;
-    margin-right: 100px;
-}
-
 .iquedev-btn-copy {
     display: flex;
     justify-content: center;
@@ -305,9 +290,30 @@ header{
 } */
 
 #adianti_div_content {
-    margin-top: 100px;
+    margin-top: 100px; 
     width: 100%;
     max-width: 1200px;
+}
+
+.ique-dev-margin-top {
+    margin-top: 150px !important;
+}
+
+/* 
+#iquedev-container-login {
+    width: 100%;
+    display: flex;
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+} */
+
+
+
+.iquedev-full-width {
+    max-width: 100% !important;
 }
 
 a {
@@ -557,3 +563,66 @@ label, td, th, .panel-title, .card-title, li, h1, h2, h3, h4, h5 ,h6 {
 .modal-header {
     display: block;
 }
+
+.iquedev-login-form {
+    min-height: 330px !important;
+}
+
+
+@media only screen and (max-width:700px) {
+    .iquedev-area-controls {
+        margin-top: 20px;
+        display: flex;
+        width: 95%;
+        /* background-color: tomato; */
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        /* padding: 10px; */
+        /* padding-right: 10px; */
+        /* background-color: violet; */
+    }
+
+    .iquedev-area-choice-combinations {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    #iquedev-label-area-choice-combinations {
+        width: 100%;
+    }
+
+
+
+    /* .iquedev-area-btns-combinations {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } */
+
+}
+
+
+@media only screen and (min-width:700px) {
+
+
+.iquedev-area-choice-correspondence {
+    /* width: 230px; */
+    flex: 1;
+}
+
+.iquedev-area-choice-combinations {
+    flex: 1.4;
+    margin-right: 100px;
+}
+
+
+
+}
+
+
